Comparison Settings Activity Navigation

--- a/GroupProject/JobCompare6300/app/src/main/res/layout/activity_comparison_settings.xml
+++ b/GroupProject/JobCompare6300/app/src/main/res/layout/activity_comparison_settings.xml
@@ -6,4 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".ComparisonSettings">
 
+    <LinearLayout
+        android:layout_width="409dp"
+        android:layout_height="729dp"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="1dp">
+
+        <TextView
+            android:id="@+id/txt_settingstitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Adjust Comparison Settings"
+            android:textAlignment="center" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
