--- a/GroupProject/JobCompare6300/app/src/main/res/layout/activity_main.xml
+++ b/GroupProject/JobCompare6300/app/src/main/res/layout/activity_main.xml
@@ -50,6 +50,7 @@
             android:id="@+id/btn_settings"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="ComparisonSettings"
             android:text="Comparison Settings" />
 
     </LinearLayout>
