--- a/GroupProject/JobCompare6300/app/src/main/res/layout/activity_job_offers.xml
+++ b/GroupProject/JobCompare6300/app/src/main/res/layout/activity_job_offers.xml
@@ -25,6 +25,7 @@
             android:layout_height="41dp"
             android:text="Job Offers"
             android:textAlignment="center"
+            android:textColor="@android:color/black"
             android:textSize="18sp" />
 
         <LinearLayout
@@ -50,6 +51,7 @@
                     android:ellipsize="middle"
                     android:text="@string/job_title"
                     android:textAlignment="viewStart"
+                    android:textColor="@android:color/black"
                     android:textSize="14sp" />
 
                 <EditText
@@ -78,7 +80,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="3"
-                    android:text="@string/company" />
+                    android:text="@string/company"
+                    android:textColor="@android:color/black" />
 
                 <EditText
                     android:id="@+id/editText12"
@@ -104,7 +107,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="3.5"
-                    android:text="@string/city" />
+                    android:text="@string/city"
+                    android:textColor="@android:color/black" />
 
                 <EditText
                     android:id="@+id/editText13"
@@ -130,7 +134,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="3"
-                    android:text="@string/state" />
+                    android:text="@string/state"
+                    android:textColor="@android:color/black" />
 
                 <EditText
                     android:id="@+id/editText14"
@@ -156,7 +161,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/cost_of_living_index" />
+                    android:text="@string/cost_of_living_index"
+                    android:textColor="@android:color/black" />
 
                 <EditText
                     android:id="@+id/editText15"
@@ -182,7 +188,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:text="@string/yearly_salary" />
+                    android:text="@string/yearly_salary"
+                    android:textColor="@android:color/black" />
 
                 <EditText
                     android:id="@+id/editText16"
@@ -208,7 +215,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:text="@string/signing_bonus" />
+                    android:text="@string/signing_bonus"
+                    android:textColor="@android:color/black" />
 
                 <EditText
                     android:id="@+id/editText17"
@@ -234,7 +242,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:text="@string/yearly_bonus" />
+                    android:text="@string/yearly_bonus"
+                    android:textColor="@android:color/black" />
 
                 <EditText
                     android:id="@+id/editText18"
@@ -260,7 +269,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="2"
-                    android:text="@string/retirement_bonus" />
+                    android:text="@string/retirement_bonus"
+                    android:textColor="@android:color/black" />
 
                 <EditText
                     android:id="@+id/editText19"
@@ -286,7 +296,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:text="@string/leave_time" />
+                    android:text="@string/leave_time"
+                    android:textColor="@android:color/black" />
 
                 <EditText
                     android:id="@+id/editText20"
@@ -304,33 +315,61 @@
             android:layout_height="72dp"
             android:orientation="horizontal">
 
-            <ImageButton
-                android:id="@+id/imageButton2"
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <Button
+                android:id="@+id/button4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:srcCompat="@android:drawable/ic_input_add" />
+                android:background="#03A9F4"
+                android:text="@string/btn_add"
+                android:textColor="@android:color/white" />
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
 
             <Button
                 android:id="@+id/button2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/btn_save" />
+                android:background="#03A9F4"
+                android:text="@string/btn_save"
+                android:textColor="@android:color/white" />
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
 
             <Button
                 android:id="@+id/button3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/btn_compare" />
+                android:background="#03A9F4"
+                android:text="@string/btn_compare"
+                android:textColor="@android:color/white" />
 
-            <ImageButton
-                android:id="@+id/imageButton"
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <Button
+                android:id="@+id/button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
+                android:background="#03A9F4"
+                android:text="@string/btn_cancel"
+                android:textColor="@android:color/white" />
 
         </LinearLayout>
 
