--- a/GroupProject/JobCompare6300/app/src/main/res/layout/activity_comparison_settings.xml
+++ b/GroupProject/JobCompare6300/app/src/main/res/layout/activity_comparison_settings.xml
@@ -22,7 +22,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="60"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <TextView
@@ -44,7 +44,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="60"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <TextView
@@ -66,7 +66,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <TextView
@@ -88,7 +88,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="60"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <TextView
@@ -110,7 +110,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="60"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <TextView
