--- a/GroupProject/JobCompare6300/app/src/main/res/layout/activity_comparison_settings.xml
+++ b/GroupProject/JobCompare6300/app/src/main/res/layout/activity_comparison_settings.xml
@@ -33,7 +33,7 @@
                 android:text="  Yearly Salary Weight:" />
 
             <EditText
-                android:id="@+id/yearlySalaryWeightage"
+                android:id="@+id/ysw"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -55,7 +55,7 @@
                 android:text="  Signing Bonus Weight:" />
 
             <EditText
-                android:id="@+id/signingBonusWeightage"
+                android:id="@+id/sbw"
                 android:layout_width="55dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -77,7 +77,7 @@
                 android:text="  Yearly Bonus Weight:" />
 
             <EditText
-                android:id="@+id/yearlyBonusWeightage"
+                android:id="@+id/ybw"
                 android:layout_width="46dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -99,7 +99,7 @@
                 android:text="  Retirement Benefits Weight:" />
 
             <EditText
-                android:id="@+id/retirementBenefitsWeightage"
+                android:id="@+id/rbw"
                 android:layout_width="91dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -121,12 +121,42 @@
                 android:text="  Leave Time Weight:" />
 
             <EditText
-                android:id="@+id/leaveTimeWeightage"
+                android:id="@+id/ltw"
                 android:layout_width="38dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
                 android:inputType="textPersonName" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="93dp"
+            android:orientation="vertical"></LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/saveButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Save" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/testText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
         </LinearLayout>
 
     </LinearLayout>
