--- a/GroupProject/JobCompare6300/app/src/main/res/layout/activity_main.xml
+++ b/GroupProject/JobCompare6300/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,7 @@
             android:id="@+id/btn_currentjob"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="CurrentJobDetails"
             android:text="Current Job" />
 
         <Button
