Modified corresponding java classes for activities

--- a/GroupProject/JobCompare6300/app/src/main/res/layout/activity_current_job_details.xml
+++ b/GroupProject/JobCompare6300/app/src/main/res/layout/activity_current_job_details.xml
@@ -326,7 +326,7 @@
                 android:layout_weight="1" />
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/btn_current_job_details_save"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -345,7 +345,7 @@
                 android:layout_weight="1" />
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/btn_current_job_details_cancel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
