--- a/GroupProject/JobCompare6300/app/src/main/res/layout/activity_main.xml
+++ b/GroupProject/JobCompare6300/app/src/main/res/layout/activity_main.xml
@@ -41,6 +41,7 @@
             android:id="@+id/btn_compare"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="CompareJobOffers"
             android:text="Compare Job Offers" />
 
         <Space
