--- a/GroupProject/JobCompare6300/app/src/main/res/layout/item_layout.xml
+++ b/GroupProject/JobCompare6300/app/src/main/res/layout/item_layout.xml
@@ -1,16 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="50dp">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:gravity="center"
+        android:text="Test"
         android:id="@+id/job"
         android:textSize="18sp"
         android:textStyle="normal"
         android:layout_alignParentLeft="true"
+        android:layout_marginLeft="25dp"
+        />
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerInParent="true"
+        android:layout_marginRight="25dp"
+        android:id="@+id/checkBox"
+        android:visibility="visible"
         />
     
 </RelativeLayout>
