--- a/GroupProject/JobCompare6300/app/src/main/res/layout/activity_job_offers.xml
+++ b/GroupProject/JobCompare6300/app/src/main/res/layout/activity_job_offers.xml
@@ -307,7 +307,12 @@
                     android:ems="10"
                     android:inputType="textPersonName" />
             </LinearLayout>
-
+            <!--            // hui test-->
+            <TextView
+                android:id="@+id/huiOffer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            <!--            // hui test-->
         </LinearLayout>
 
         <LinearLayout
