--- a/GroupProject/JobCompare6300/app/src/main/res/layout/activity_comparison_settings.xml
+++ b/GroupProject/JobCompare6300/app/src/main/res/layout/activity_comparison_settings.xml
@@ -27,7 +27,7 @@
 
             <TextView
                 android:id="@+id/textView"
-                android:layout_width="wrap_content"
+                android:layout_width="350dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="  Yearly Salary Weight:" />
@@ -49,7 +49,7 @@
 
             <TextView
                 android:id="@+id/textView2"
-                android:layout_width="wrap_content"
+                android:layout_width="350dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="  Signing Bonus Weight:" />
@@ -71,7 +71,7 @@
 
             <TextView
                 android:id="@+id/testView3"
-                android:layout_width="wrap_content"
+                android:layout_width="350dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="  Yearly Bonus Weight:" />
@@ -93,7 +93,7 @@
 
             <TextView
                 android:id="@+id/testView4"
-                android:layout_width="wrap_content"
+                android:layout_width="350dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="  Retirement Benefits Weight:" />
@@ -115,7 +115,7 @@
 
             <TextView
                 android:id="@+id/textView5"
-                android:layout_width="wrap_content"
+                android:layout_width="350dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="  Leave Time Weight:" />
