--- a/GroupProject/JobCompare6300/app/src/main/res/layout/activity_job_offers.xml
+++ b/GroupProject/JobCompare6300/app/src/main/res/layout/activity_job_offers.xml
@@ -196,7 +196,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:digits="0123456789"
+                    android:digits="0123456789."
                     android:ems="10"
                     android:inputType="textPersonName" />
             </LinearLayout>
@@ -224,7 +224,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="5"
-                    android:digits="0123456789"
+                    android:digits="0123456789."
                     android:ems="10"
                     android:inputType="textPersonName" />
             </LinearLayout>
@@ -252,7 +252,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="4.5"
-                    android:digits="0123456789"
+                    android:digits="0123456789."
                     android:ems="10"
                     android:inputType="textPersonName" />
             </LinearLayout>
@@ -280,7 +280,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="5.75"
-                    android:digits="0123456789"
+                    android:digits="0123456789."
                     android:ems="10"
                     android:inputType="textPersonName" />
             </LinearLayout>
