--- a/GroupProject/JobCompare6300/app/src/main/res/layout/activity_job_offers.xml
+++ b/GroupProject/JobCompare6300/app/src/main/res/layout/activity_job_offers.xml
@@ -326,15 +326,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1" />
 
-            <Button
-                android:id="@+id/btn_job_offers_add"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="#03A9F4"
-                android:text="@string/btn_add"
-                android:textColor="@android:color/white" />
-
             <Space
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -376,6 +367,11 @@
                 android:background="#03A9F4"
                 android:text="@string/btn_cancel"
                 android:textColor="@android:color/white" />
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
 
         </LinearLayout>
 
