--- a/GroupProject/JobCompare6300/app/src/main/res/layout/activity_job_offer_compare.xml
+++ b/GroupProject/JobCompare6300/app/src/main/res/layout/activity_job_offer_compare.xml
@@ -39,8 +39,8 @@
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="TextView"
                 android:enabled="false"
+                android:text="TextView"
                 android:textSize="14sp" />
 
             <EditText
@@ -48,9 +48,9 @@
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:textSize="14sp"
                 android:enabled="false"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textSize="14sp" />
         </LinearLayout>
 
         <LinearLayout
