--- a/GroupProject/JobCompare6300/app/src/main/res/layout/activity_current_job_details.xml
+++ b/GroupProject/JobCompare6300/app/src/main/res/layout/activity_current_job_details.xml
@@ -340,9 +340,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="#03A9F4"
-                android:text="@string/btn_save"
-                android:textColor="@android:color/white" />
+                android:text="@string/btn_save" />
 
             <Space
                 android:layout_width="wrap_content"
@@ -359,9 +357,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="#03A9F4"
-                android:text="@string/btn_cancel"
-                android:textColor="@android:color/white" />
+                android:text="@string/btn_cancel" />
 
             <Space
                 android:layout_width="wrap_content"
