--- a/GroupProject/JobCompare6300/app/src/main/res/layout/activity_current_job_details.xml
+++ b/GroupProject/JobCompare6300/app/src/main/res/layout/activity_current_job_details.xml
@@ -171,6 +171,7 @@
                     android:layout_weight="4.5"
                     android:digits="1234567890."
                     android:ems="10"
+                    android:enabled="false"
                     android:inputType="textPersonName" />
             </LinearLayout>
 
