COL lookup JobOffers

--- a/GroupProject/JobCompare6300/app/src/main/res/layout/activity_job_offers.xml
+++ b/GroupProject/JobCompare6300/app/src/main/res/layout/activity_job_offers.xml
@@ -171,6 +171,7 @@
                     android:layout_weight="4.5"
                     android:digits="0123456789."
                     android:ems="10"
+                    android:enabled="false"
                     android:inputType="textPersonName" />
             </LinearLayout>
 
